# contentful-management.py

./: .bito.yaml  .travis.yml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.rst  catalog-info.yaml  pyproject.toml  requirements.txt  setup.py  tox.ini
.bito/guidelines/: domain-invariants.txt  repo-truth-and-boundaries.txt  review-posture.txt
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
AI_context/ADRs/: 2021-06-01-vcr-cassettes-for-testing.md  2021-08-01-circleci-to-github-actions.md
_docs/: conf.py  contentful_management.rst  index.rst  modules.rst
contentful_management/: __init__.py  api_key.py  api_keys_proxy.py  api_usage.py  api_usages_proxy.py  array.py  asset.py  assets_proxy.py  client.py  client_proxy.py  content_type.py  content_type_editor_interfaces_proxy.py  content_type_entries_proxy.py  content_type_field.py  content_type_field_types.py  content_type_field_validation.py  content_type_metadata.py  content_type_resource_proxy.py  content_type_snapshots_proxy.py  content_types_proxy.py  editor_interface.py  editor_interfaces_proxy.py  entries_proxy.py  entry.py  entry_resource_proxy.py  entry_snapshots_proxy.py  environment.py  environment_assets_proxy.py  environment_content_types_proxy.py  environment_entries_proxy.py  environment_locales_proxy.py  environment_resource_proxy.py  environment_ui_extensions_proxy.py  environments_proxy.py  errors.py  locale.py  locales_proxy.py  organization.py  organization_periodic_usage.py  organization_periodic_usages_proxy.py  (+55 more)
docs/: .buildinfo  LICENSE  contentful_management.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/ADRs/: 2017-01-01-proxy-and-resource-builder-pattern.md  2021-08-01-circleci-to-github-actions.md  2022-09-01-pdm-package-manager.md  README.md
docs/_modules/: index.html
docs/_sources/: contentful_management.rst.txt  contentful_management.txt  index.rst.txt  index.txt
docs/_static/: documentation_options.js
fixtures/api_key/: create.yaml  create_with_environment.yaml  delete.yaml  find.yaml  find_2.yaml  find_3.yaml  find_preview.yaml  not_found.yaml  update.yaml  update_key.yaml
fixtures/api_usage/: all.yaml
fixtures/asset/: all.yaml  archive.yaml  create.yaml  create_empty.yaml  delete.yaml  find.yaml  find_2.yaml  find_3.yaml  find_4.yaml  find_5.yaml  find_6.yaml  find_7.yaml  id_create.yaml  not_found.yaml  process.yaml  publish.yaml  select_operator.yaml  unarchive.yaml  unpublish.yaml  update.yaml  upload_create.yaml
fixtures/client/: additional_headers.yaml  entries.yaml  not_found.yaml
fixtures/content_type/: add_taxonomies_to_content_type.yaml  all_published.yaml  create.yaml  create_no_fields.yaml  create_with_resource_link_field.yaml  delete.yaml  find.yaml  find_2.yaml  find_3.yaml  find_4.yaml  id_create.yaml  issue_17.yaml  not_found.yaml  publish.yaml  unpublish.yaml  update.yaml  update_default_value.yaml
fixtures/editor_interface/: all.yaml  find.yaml  update.yaml
fixtures/entry/: added_fields_1.yaml  create.yaml  (+32 more)
tests/: __init__.py  api_key_test.py  api_keys_proxy_test.py  api_usage_test.py  array_test.py  asset_test.py  assets_proxy_test.py  client_proxy_test.py  client_test.py  content_type_editor_interfaces_proxy_test.py  content_type_entries_proxy_test.py  content_type_field_test.py  content_type_field_types_test.py  content_type_field_validation_test.py  content_type_resource_proxy_test.py  content_type_snapshots_proxy_test.py  content_type_test.py  content_types_proxy_test.py  editor_interface_test.py  editor_interfaces_proxy_test.py  entries_proxy_test.py  entry_resource_proxy_test.py  entry_snapshots_proxy_test.py  entry_test.py  environment_test.py  errors_test.py  locale_test.py  organization_periodic_usage_test.py  organization_test.py  organizations_proxy_test.py  personal_access_token_test.py  personal_access_tokens_proxy_test.py  preview_api_key_test.py  preview_api_keys_proxy_test.py  resource_builder_test.py  resource_test.py  role_test.py  snapshot_test.py  snapshots_proxy_test.py  space_assets_proxy_test.py  (+24 more)
(+209 files in other folders)
